welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:8: error: not found: value baissebrosse
  baissebrosse()
  ^PictureMono1:9: error: not found: value levebrosse
  levebrosse()
  ^PictureMono1:13: error: not found: value baissebrosse
  baissebrosse()
  ^PictureMono1:14: error: not found: value levebrosse
  levebrosse()
  ^PictureMono1:18: error: not found: value baissebrosse
  baissebrosse()
  ^PictureMono1:19: error: not found: value levebrosse
  levebrosse()
  ^