welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
  faireV()
  gauche()
}
def faireV(){
  avance()
  avance()
  baissebrosse()
  levebrosse()
  avance()
  droite()
  avance()
  baissebrosse()
  levebrosse()
  recule()
  gauche()
  avance()
  baissebrosse()
  levebrosse()
  avance()
}